trunk/Archive2/fe/1e67ac341b3216/output
main.cpp:12:40: error: inline declaration of 'woot' follows non-inline definition
        template<class T0> friend auto woot(T0) {}
                                       ^
main.cpp:6:25: note: previous definition is here
template<class T0> auto woot(T0) {}
                        ^
1 error generated.
